# AutoGT

./: .gitignore  AI_Workflow_Walkthrough.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_EXPLANATION.md  CLI_MAIN_PY_EXPLANATION.md  IMPLEMENTATION_COMPLETE.md  MAIN_PY_EXPLANATION.md  PYTHON_PACKAGE_EXECUTION_PROTOCOL.md  RETRY_MECHANISM_SUMMARY.md  TARA_PROCESSOR_ANALYSIS.md  ai_tara_demo.py  ai_workflow_demo.py  asset_implementation_demo.py  autogen_agent_architecture.puml  bmw_ix3_adas_system.txt  bmw_ix3_ai_analysis_results.json  bmw_ix3_ai_identified_assets.csv  bmw_ix_assets.csv  bmw_ix_tara_analysis.json  bmw_ix_with_assets.json  cli_integration_demo.py  complete_tara_walkthrough.py  database_connections.puml  demo_ai_integration.py  final_test_export.json  main.py  my_analysis_export.json  pyproject.toml  shibi_ev_assets.csv  shibi_ix7_assets.csv  shibi_walkthrough_summary.md  tara_analysis_03f256f9_20250930_160116.json  tara_analysis_4e29c36f_20250929_224220.json  tara_analysis_917093e7_20250930_155415.json  tara_analysis_d54f77d9_20251014_172140.json  tara_analysis_ec44d97e_20250930_145634.json  tara_processor_analysis.puml  tesla_model_y_assets.csv  tesla_model_y_final_results.json  tesla_model_y_results.json  (+12 more)
.github/: copilot-instructions.md
.github/prompts/: definition.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
autogt-output/33ac746d-fe83-41fe-a991-2337eaff8136/: analysis.json  assets.json  attack_paths.json  cybersecurity_goals.json  feasibility.json  final_report.json  impacts.json  risks.json  threats.json  workflow_state.json
autogt-output/71b71dae-da79-4fce-9d9a-fc69025b6ec5/: ai_analysis_summary.json  ai_assets.json  ai_threats.json  analysis.json  gemini_ai_assets.json  gemini_ai_recommendations.json  gemini_ai_threats.json
autogt-output/analyses/: analyses.json
database/: migrations.py
src/autogt/: __init__.py  (+1 more)
(+129 files in other folders)
